package seedu.address.model.person;

/**
 * Colours to represent the status of an item on a trackable list
 */
public enum TrackerColour {
    GREEN,
    RED,
    GREY
}
